--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,48 +1,3 @@
-:root {
-    --background-light: white;
-    --background-dark: black;
-    --text-light: black;
-    --text-dark: white;
-    --shape-color: #3d7f92;
-    --selected-color: #8d2929;
-    --current-date-color: #ffc600;
-    --border-color-light: black;
-    --border-color-dark: white;
-    --dead-border-color: transparent;
-}
-
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    background-color: var(--background-light);
-    color: var(--text-light);
-    user-select: none;
-    box-sizing: border-box;
-}
-
-body.light {
-    background-color: var(--background-light);
-    color: var(--text-light);
-}
-
-body.dark {
-    background-color: var(--background-dark);
-    color: var(--text-dark);
-}
-
-h1, h4 {
-    text-align: center;
-}
-
-h1 {
-    font-size: min(5vw, 5vh);
-}
-
-.layout {
-    width: 100vw;
-    height: 100vh;
-}
 
 .board {
     display: flex;
@@ -54,7 +9,6 @@ h1 {
 }
 
 .cell {
-    border: 1px solid black;
     font-size: min(2vw, 2vh);
     height: min(8vw, 8vh);
     width: min(8vw, 8vh);
@@ -156,7 +110,7 @@ h1 {
 
 .winner {
     font-size: min(5vw, 5vh);
-    color: #147f14;
+    color: var(--winner-color);
     font-weight: 600;
     margin-bottom: min(3vw, 3vh);
 }
@@ -170,52 +124,6 @@ h1 {
 button {
     padding: 10px;
     font-size: 20px;
-}
-
-.header {
-    display: flex;
-    flex-direction: row;
-    height: 6vh;
-    min-height: 42px;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    color: var(--text-light);
-    border-bottom: 1px solid #3a3a3c;
-}
-
-.header .left {
-    width: 20vw;
-    margin-left: 3vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    column-gap: 2vw;
-}
-
-.header .center {
-    font-size: 28px;
-    font-weight: 600;
-    min-width: 35px;
-}
-
-.header .right {
-    width: 20vw;
-    margin-right: 3vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    column-gap: 2vw;
-}
-
-.header .icon {
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.p-dialog-mask .p-dialog {
-    margin: 8vw;
+    background-color: var(--button-color);
+    border: none
 }
